# browser-bridge

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  Makefile  README.md  SECURITY.md  clippy.toml  deny.toml  install.ps1  install.sh  justfile  mcp-config.example.json  rust-toolchain.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  cws-publish.yml  nightly.yml  release.yml  sbom.yml  security.yml
contracts/: README.md  bridge-request.schema.json  bridge-response.schema.json  capabilities.json  errors.json  protocol-version.json  tools.json
docs/: README.md  agent-prompt.md  architecture.md  chrome-web-store.md  cli.md  compatibility.md  development.md  governance-roadmap.md  integrations.md  operations.md  privacy-policy.md  release.md  requirements.md  wsl.md
docs/adr/: 0001-use-rust-single-binary.md  0002-three-process-architecture-localhost-tcp.md  0003-content-script-snapshot-vs-chrome-debugger.md  0004-allowlist-with-optional-host-permissions.md  0005-page-eval-disabled-by-default.md  0006-toast-confirmation-for-high-risk.md  0013-ci-and-toolchain.md  (+12 more)
extension/: background.js  build.mjs  content.js  eslint.config.js  manifest.json  options.html  package-lock.json  package.json  popup.html  popup.js  toast.css  tsconfig.json
install/: install.ps1  install.sh  mcp-config.example.json
scripts/: check-extension-id.mjs  gen-ops.mjs
src/: cli.rs  doctor.rs  error.rs  ipc.rs  lib.rs  log.rs  main.rs  mcp_server.rs  native_host.rs  protocol.rs  session.rs  tools.rs
tests/: README.md  dom_test.ts  e2e.py  ext_test.js  ext_test.ts  integration_e2e.ts  package-lock.json  package.json  run_all.sh  tsconfig.json
(+53 files in other folders)
